<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/select_account_type"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:id="@+id/account_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/header">

            <RadioButton
                android:id="@+id/savings_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savings"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/current_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/credit_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/bonus_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bonus_account"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/investment_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investment_account"
                android:textAllCaps="true" />

            <RadioButton
                android:id="@+id/universal_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universal_account"
                android:textAllCaps="true" />

        </RadioGroup>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_types" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>