<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/select_receipt_format"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/customer"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/merchant"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/customer" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/merchant" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>